# machadofolio

./: .env.monorepo  .env.production  .env.staging  .gitignore  DATABASE.md  HOW-GENERATE-BKP-DATABASE.md  HOW-TO-USE-TYPEORM-WITH-NEST.md  HOW-USING-DOCKER-WITH-THIS-PROJECT.md  MOST-USED-COMMAND-LIBRARY.md  README.md  docker-compose.yml  package.json  turbo.json
.github/: copilot-instructions.md
.github/workflows/: block-non-develop-merges.yml
IA/mach-web/: package-lock.json  package.json
apps/auth/: next.config.ts  package.json
apps/auth/src/: middleware.ts
apps/auth/src/app/: layout.tsx  page.scss  page.tsx
apps/auth/src/components/: index.ts
apps/auth/src/routes/: routes.ts
apps/auth/src/shared/: index.ts
apps/docs/: package.json  tsconfig.json
apps/finance/: PLANO_ARQUITETURA.md  README.md  next.config.ts  package.json
apps/finance/src/: middleware.ts
apps/finance/src/app/: layout.tsx  page.scss  page.tsx
apps/geek/: package.json  tsconfig.json
apps/geek/src/: middleware.ts
apps/nest-js/: .env.development  .env.local_production  .env.production  .env.staging  README.md  eslint.config.mjs  jest.config.ts  jest.setup.ts  package.json  tsconfig.json
apps/nest-js/src/: app.controller.spec.ts  app.controller.ts  app.data-source.ts  app.module.ts  app.service.spec.ts  app.service.ts  main.ts
apps/nest-js/test/: app.e2e-spec.ts
apps/web/: package.json
apps/web/app/: layout.tsx  page.tsx
db/: db_v1.sql  db_v2.sql
db/dump/: prodPostgresDB.sql
fast_zero/: pyproject.toml
scripts/: init-multi-db.sh  next-dev-env.sh
(+569 files in other folders)
